--- a/configs/exp_demo.yaml
+++ b/configs/exp_demo.yaml
@@ -1,53 +1,8 @@
-exp_demo_mast3rslam:
-  Config: config_demo.yaml
+demo:
+  Config: /home/vmehta/hmnd/hmnd_playground/vmehta/vislam/vslam-lab/configs/config_demo.yaml
+  Module: orbslam3
   NumRuns: 1
-  Parameters: {verbose: 1, rgb_idx: [0,100]}
-  Module: mast3rslam
-
-exp_demo_droidslam:
-  Config: config_demo.yaml
-  NumRuns: 1
-  Parameters: {verbose: 1, rgb_idx: [0,100]}
-  Module: droidslam
-
-exp_demo_dpvo:
-  Config: config_demo.yaml
-  NumRuns: 1
-  Parameters: {verbose: 1, rgb_idx: [0,100]}
-  Module: dpvo
-
-exp_demo_orbslam2:
-  Config: config_demo.yaml
-  NumRuns: 1
-  Parameters: {verbose: 1, rgb_idx: [0,100]}
-  Module: orbslam2
-
-exp_demo_glomap:
-  Config: config_demo.yaml
-  NumRuns: 1
-  Parameters: {verbose: 1, rgb_idx: [0,100], matcher_type: exhaustive}
-  Module: glomap
-
-# exp_demo_mast3rslam-dev:
-#   Config: config_demo.yaml
-#   NumRuns: 1
-#   Parameters: {verbose: 1}
-#   Module: mast3rslam-dev
-
-# exp_demo_droidslam-dev:
-#   Config: config_demo.yaml
-#   NumRuns: 1
-#   Parameters: {verbose: 1}
-#   Module: droidslam-dev
-
-# exp_demo_dpvo-dev:
-#   Config: config_demo.yaml
-#   NumRuns: 1
-#   Parameters: {verbose: 1}
-#   Module: dpvo-dev
-
-# exp_demo_orbslam2-dev:
-#   Config: config_demo.yaml
-#   NumRuns: 1
-#   Parameters: {verbose: 1}
-#   Module: orbslam2-dev
+  Parameters:
+    mode: mono-vi
+    verbose: 1
+    vocabulary: /home/vmehta/hmnd/hmnd_playground/vmehta/vislam/vslam-lab/Baselines/ORB_SLAM3/Vocabulary/ORBvoc.txt
