--- a/pixi.toml
+++ b/pixi.toml
@@ -807,7 +807,7 @@ cuda = "12.0"
 [feature.okvis2-dev.tasks]
 git-clone = {cmd = "git clone https://github.com/HumanoidTeam/okvis2.git Baselines/OKVIS2-DEV && cd Baselines/OKVIS2-DEV && git submodule update --init --recursive"}
 # install = {cmd = "mkdir build && cd build && cmake -DCMAKE_BUILD_TYPE=Release .. && make -j12", cwd = "Baselines/OKVIS2-DEV"}
-install = {cmd = "./build.sh", cwd = "Baselines/OKVIS2-DEV"}
+install = {cmd = "./build.sh -v", cwd = "Baselines/OKVIS2-DEV"}
 execute-mono_vi = {cmd = "./bin/vslamlab_okvis2_mono_vi",  cwd = "Baselines/OKVIS2-DEV"}
 execute-stereo_vi = {cmd = "./bin/vslamlab_okvis2_mono_vi",  cwd = "Baselines/OKVIS2-DEV"}
 execute-multi_vi = {cmd = "./bin/vslamlab_okvis2_mono_vi",  cwd = "Baselines/OKVIS2-DEV"}
