kimera vio try1

--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@ Baselines/ORB_SLAM3-DEV
 Baselines/OKVIS2
 Baselines/OKVIS2-DEV
 Baselines/PyCuVSLAM/
+Baselines/Kimera-VIO-DEV
 
 Baselines/AnyFeature-VSLAM
 Baselines/dso
