--- a/configs/exp_demo.yaml
+++ b/configs/exp_demo.yaml
@@ -1,8 +1,7 @@
 demo:
   Config: /home/vmehta/hack-space/VSLAM-LAB/configs/config_demo.yaml
-  Module: okvis2-dev
+  Module: kimera-dev
   NumRuns: 1
   Parameters:
-    mode: stereo-vi
+    mode: mono-vi
     verbose: 1
-    vocabulary: /home/vmehta/hack-space/VSLAM-LAB/Baselines/OKVIS2-DEV/resources/small_voc.yml.gz
