A bit more cleanup

--- a/pixi.toml
+++ b/pixi.toml
@@ -22,9 +22,6 @@ get-benchmark-path = {cmd = "VSLAMLAB_BENCHMARK=$(python3 -c 'from path_constant
 clean-swap = {cmd = "sudo /sbin/swapoff -a && sudo /sbin/swapon -a"}
 kill-all = {cmd = "pkill -f -e 'droidslam|mast3rslam|dpvo|monogs|orbslam2|colmap|glomap|gensfm|mast3r|vggt|pycuvslam|vslamlab' && sudo /sbin/swapoff -a && sudo /sbin/swapon -a"} 
 
-rig-discover = {cmd = "pixi run --frozen -e vslamlab python Tools/rig_builder.py discover $DATASET $SEQUENCE $OPTIONS", env = {DATASET = "hmnd", SEQUENCE = "HMND", OPTIONS = ""}}
-rig-create = {cmd = "pixi run --frozen -e vslamlab python Tools/rig_builder.py create $DATASET $SEQUENCE --name $NAME --cams $CAMS --ref $REF $FLAGS", env = {DATASET = "hmnd", SEQUENCE = "HMND", NAME = "rear_stereo", CAMS = "rear_left rear_right", REF = "rear_left", FLAGS = "--activate"}}
-rig-activate = {cmd = "pixi run --frozen -e vslamlab python Tools/rig_builder.py activate $DATASET $SEQUENCE $NAME", env = {DATASET = "hmnd", SEQUENCE = "HMND", NAME = "rear_stereo"}}
 
 
 # environments begin
@@ -805,7 +802,7 @@ platforms = ["linux-64"]
 cuda = "12.0"
 
 [feature.okvis2-dev.tasks]
-git-clone = {cmd = "git clone https://github.com/HumanoidTeam/okvis2.git Baselines/OKVIS2-DEV && cd Baselines/OKVIS2-DEV && git submodule update --init --recursive"}
+git-clone = {cmd = "git clone -b hmnd https://github.com/HumanoidTeam/okvis2.git Baselines/OKVIS2-DEV && cd Baselines/OKVIS2-DEV && git submodule update --init --recursive"}
 # install = {cmd = "mkdir build && cd build && cmake -DCMAKE_BUILD_TYPE=Release .. && make -j12", cwd = "Baselines/OKVIS2-DEV"}
 install = {cmd = "./build.sh -v", cwd = "Baselines/OKVIS2-DEV"}
 execute-mono_vi = {cmd = "./bin/vslamlab_okvis2_mono_vi",  cwd = "Baselines/OKVIS2-DEV"}
